--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Adrian</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="portifolio.css">
+        <link rel="stylesheet" href="./assets/css/reset.css">
+        <link rel="stylesheet" href="./assets/css/portifolio.css">
+        <link rel="stylesheet" href="./assets/css/icone/icone.css">
+        <link rel="stylesheet" href="./assets/css/sobre/sobre.css">
+        <link rel="stylesheet" href="./assets/css/redes/redes.css">
     </head>
     <body>
         <header>
@@ -12,24 +15,24 @@
         </header>
         <main>
             <div class="bio">
-                <h1>Bem vindo ao meu site!</h1>
+                <h1>Bem Vindo ao meu site!</h1>
                  Eu sou Adrian, tenho 15 anos, moro em Indaiatuba SP(Brasil) e tenho uma<br>
                 grande paixão por criar! E aqui você pode ver todas essas criações de forma<br>
                 organizada, juntamente de todas as minhas redes sociais.
             </div>
             <ul class="redes">
                 <li>
-                    <h2 class="redesTexto"><img class="redesImagem" src="youtube.png">  Youtube</h2>
-                    <p><a class="youtubeLink" href="https://www.youtube.com/channel/UCUN10Ude7WHs3kLvZ7NNm6Q">Adrian 64(canal principal)</a></p>
-                    <p><a class="youtubeLink" href="https://www.youtube.com/channel/UC6_k00xP8-GCZ27aZItn94A/featured">Rakache(canal secundário)</a></p>
+                    <h2 class="rede__texto"><img class="rede__imagem" src="./assets/img/youtube.png">  Youtube</h2>
+                    <p><a class="youtube-link" href="https://www.youtube.com/channel/UCUN10Ude7WHs3kLvZ7NNm6Q">Adrian 64(canal principal)</a></p>
+                    <p><a class="youtube-link" href="https://www.youtube.com/channel/UC6_k00xP8-GCZ27aZItn94A/featured">Rakache(canal secundário)</a></p>
                 </li>
                 <li>
-                    <h2 class="redesTexto"><img class="redesImagem" src="twitter.png">  Twitter</h2>
-                    <p><a class="twitterLink" href="https://twitter.com/Adrian_sk8sta64">adriansk8tista64</a></p>
+                    <h2 class="rede__texto"><img class="rede__imagem" src="./assets/img/twitter.png">  Twitter</h2>
+                    <p><a class="twitter-link" href="https://twitter.com/Adrian_sk8sta64">adriansk8tista64</a></p>
                 </li>
                 <li>
-                    <h2 class="redesTexto"><img class="redesImagem" src="email.png">  Email</h2>
-                    <p class="emailLink">adriancotrimdosreis4@gmail.com</p>
+                    <h2 class="rede__texto"><img class="rede__imagem" src="./assets/img/email.png">  Email</h2>
+                    <p class="email-link">adriancotrimdosreis4@gmail.com</p>
                 </li>
             </ul>
             
